--- a/schedules/main/templates/index.html
+++ b/schedules/main/templates/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Alytics</title>
 </head>
 <body>
-
+    <a href="{% url 'admin:index' %}">
+        <H1>
+            Привет! Я ссылка на админку
+        </H1>
+    </a>
 </body>
 </html>
