--- a/schedules/main/templates/index.html
+++ b/schedules/main/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <a href="{% url 'admin:index' %}">
         <H1>
-            Привет! Я ссылка на админку
+            Привет! Я ссылка на админку.
         </H1>
     </a>
 </body>
